# nexus-trade-microservices

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: deploy-only.yml  prod-deploy.yml  staging-deploy.yml
infrastructure/compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml
infrastructure/docker/nginx/: nginx.conf
services/analytics-python/: Dockerfile  pyproject.toml
services/analytics-python/contracts/openapi/: index.yaml
services/analytics-python/contracts/openapi/components/responses/: errors.yaml
services/analytics-python/contracts/openapi/components/schemas/: candle.yaml  prediction.yaml  risk.yaml
services/analytics-python/contracts/openapi/paths/: analysis.yaml  market.yaml
services/analytics-python/scripts/: verify_endpoints.py
services/analytics-python/src/application/: use_cases.py
services/analytics-python/src/domain/: models.py  ports.py
services/analytics-python/src/infrastructure/: analytics_adapter.py  binance_adapter.py  mongo_adapter.py
services/analytics-python/src/presentation/: main.py
services/analytics-python/src/presentation/api/: analytics.py  market.py
services/notifier-node/: Dockerfile  package-lock.json  package.json
services/notifier-node/src/: app.module.ts  main.ts
services/order-engine-csharp/: Dockerfile  NexusTrade.Orders.slnx  SERVICE_CONTEXT.md
services/pricing-go/: Dockerfile  go.mod  go.sum
services/wallet-java/: .dockerignore  Dockerfile  pom.xml
web/: Dockerfile  package-lock.json  package.json
web/src/app/: layout.tsx
web/src/lib/: api.ts  (+1 more)
(+155 files in other folders)
