[tool.poetry]
name = "nexus-trade-analytics"
version = "0.1.0"
description = "Nexus Trade Analytics Service"
authors = ["Nexus Trade Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
motor = "^3.3.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
python-multipart = "^0.0.9"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
black = "^24.1.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
